feat(groups): added endpoint to change groups visibility status
